updated contact page completed flipping circles and updates on talking points updated services workshop description

--- a/LS-lets-talk.html
+++ b/LS-lets-talk.html
@@ -30,10 +30,11 @@ p { text-align: center; font-family: Tw Cen MT; }
   <a href="LS-talking-points.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Talking Points</a>
   <a href="LS-lets-talk.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Let's Talk</a>
 </div>
-<p style="text-align: justify; font-size:26px; padding: 15px">If you would 
+<p style="text-align: center; font-size:32px; padding: 15px">If you would 
 like to know more about Language Strides LLC&apos;s services, please give a 
-call - (571) 572-2818 or send an email to 
-<a href="mailto:inquiry@language-strides.com">inquiry@language-strides.com</a>.
+call - (571) 572-2818 
+<br> 
+or send an email to <a href="mailto:inquiry@language-strides.com">inquiry@language-strides.com</a>.
 </p>
 
 
