--- a/LS-services.html
+++ b/LS-services.html
@@ -235,9 +235,8 @@ school and in play dates.</p>
    <h1>Workshops</h1>
     <div class="cardcenter">
     <p style="text-align: justify; font-size:20px"> Contact Language Strides 
-LLC to set up  a workshop for your school or parents group. We can 
-customize a program to meet your group&apos;s needs. Some of our past 
-presentations have included:<br>
+to customize a workshop for the needs of your school or parents group. 
+Past presentations have included:<br>
 <br>
 Language Development and its impact on social and emotional development<br> 
 Read With Me:  Supporting Literacy Development through the Ages<br>
