--- a/LS-home.html
+++ b/LS-home.html
@@ -2,6 +2,7 @@
 <html >
 <head>
 <title>Language Strides</title>
+<link rel="icon" href="Images/favicon-32x32.png">
 <style>
 
 h1 { text-align: center; font-family: Tw Cen MT; } 
