added pdf thumbnail and updated community page with link to pdf removed discounted services paragraph

--- a/LS-community.html
+++ b/LS-community.html
@@ -34,14 +34,37 @@ p { text-align: center; font-family: Tw Cen MT; }
 
 <p  style="margin-right: 60px; margin-left: 60px; font-size:80px;">
 <img src="Images/InTheCommunityCropped.jpg" alt="Andrea and Nora" style="float: right; margin-left:60px; width: 788px">
-Meet the Mighty Ones
 </p>
-<p  style="text-align: justify; margin-right: 60px; margin-left: 60px; font-size:26px;">
-No less than one sixth of Language Strides LLC&apos;s services are provided 
-free or at reduced rates to local families in financial need. The Mighty 
-Ones are the children who benefit from these services&ndash;Unstoppable kids 
-who are determined to learn.
+<p  style="text-align: justify; margin-right: 60px; margin-left: 350px; font-size: 30px;">
+<a href="Files/LS_newsletter_Jan_3_2021.pdf">
+January 2021 Newsletter
+<br>
+<img src="Images/LS_newsletter_Jan_3_2021_1.jpg" alt="January 2021
+Newsletter" style="float: left; margin-right:60px; margin-left: 55px; width: 200px">
 </p>
+</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <p  style="text-align: justify; margin-right: 60px; margin-left: 60px; font-size:26px;">
 Physician and community referrals are thanked with a donation to 
 <a href="https://www.cornerstonesva.org/" target="_blank">Cornerstones</a>, a nonprofit 
