modified service page with Andrea's updates removed broken form from let's talk page

--- a/LS-services.html
+++ b/LS-services.html
@@ -110,9 +110,9 @@ p { text-align: center; font-family: Tw Cen MT; }
 </div>
 
 <h1 style="font-size:50px">Services</h1>
-<p style="text-align: center; font-size:30px">Speech and Language Screening - Consultations - Speech and Language Evaluation</p>
-<p style="text-align: center; font-size:30px">Individualized Speech Language Therapy</p>
-<p style="text-align: center; font-size:30px">Social Language Group Therapy </p>
+<p style="text-align: center; font-size:30px"><a
+href="LS-lets-talk.html"> Schedule a free 15 minute phone consultation
+today.</a></p>
 
 <div class="row">
  <div class="column">
