Updated the first point to two column format requested by Andrea Updated content in those columns also

--- a/LS-talking-points.html
+++ b/LS-talking-points.html
@@ -58,8 +58,15 @@ p { text-align: center; font-family: Tw Cen MT; padding: 15px; }
   padding: 10px;
 }
 
+/* Create two equal columns that floats next to each other */
+.twocolumn {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
 /* Create three equal columns that floats next to each other */
-.column {
+.threecolumn {
   float: left;
   width: 33.33%;
   padding: 10px;
@@ -139,34 +146,38 @@ p { text-align: center; font-family: Tw Cen MT; padding: 15px; }
 </div>
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Language Strides Responds to the Coronavirus</button>
 <div class="content">
-  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
-In March 2020, Virginia&apos;s governor announced an executive order to help 
-reduce the transmission of the novel Coronavirus. Virginians were asked, 
-among other things, to remain at home except to receive or provide essential 
-services or to obtain essential supplies such as groceries. With the
-guidance and support of the American Speech-Language-Association, 
-Language Strides quickly pivoted alongside many other speech-language 
-pathology practices to <a href="https://www.asha.org/uploadedFiles/ASHA/Practice_Portal/Professional_Issues/Telepractice/Telepractice-for-Speech-and-Hearing-Services-Brochure.pdf">provide services through telepractice</a>.
-This enabled clients to continue working toward their goals during this
-extended period away from community exposure. Andrea engaged in professional 
-development programs to strengthen her telepractice skills, adapted therapy 
-materials for online presentation, and took a refresher course in infection 
-control.<br>
+ <div class="row">
+  <div class="twocolumn">
+   <h3>In 2020...</h3>
+   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+In March of 2020 we all complied with Stay At Home orders to reduce the
+transmission of the virus that causes COVID-19. Language Strides clients
+never missed a session! Parents assisted their young children to participate
+in therapy delivered remotely through tele-practice, even as their schools and
+clubs came to a screeching halt. With guidance from the American
+Speech-Language-Hearing Association and the Centers for Disease Control and
+Prevention, we resumed home visits with some changes in order to keep everyone
+healthy. It was a collaborative effort, and we did it!
+</p>
 <img src="Images/TelePractice.jpg" alt="telepractice" style="display: block; margin-left: auto; margin-right: auto; width: 50%">
-<br>
-Until we have a vaccine to protect us from the rampant spread of the 
-Coronavirus, we&apos;ll all need to take precautions in order to protect 
-the health of the community. The decision to welcome a professional into 
-your home for speech-language therapy is a personal one. We must combine what
-we know of the current state of the pandemic with our own family&apos;s 
-specific health needs to arrive at our own individual level of tolerance for 
-risk. As restrictions are reduced, some of Language Strides&apos; clients 
-are beginning to receive services in their homes again, while others have 
-chosen to continue receiving services through telepractice. Talk with Andrea 
-about your concerns and learn about Language Strides&apos; policies and 
-precautions in order to decide what&apos;s right for you.
+  </div>
+  <div class="twocolumn">
+   <h3>And Beyond!</h3>
+   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+As more people are vaccinated for COVID-19, Language Strides will continue to
+monitor and observe CDC and Virginia Department of Health guidelines. Our
+body of knowledge of the Coronavirus continues to grow and we'll continue to
+keep the health of our community and each other in mind. We&apos;ll still begin
+each visit with the question, "How is everyone feeling today&quest;" The 
+decision to welcome a professional into your home for speech-language therapy 
+is a personal one, and sometimes we still use tele-practice to meet certain
+needs. Talk with Andrea about your concerns and learn about Language
+Strides&apos; policies and precautions in order to decide what's right for you.
   </p>
-</div> 
+  </div>
+ </div>
+</div>
+
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Does my child need a Speech Language Pathologist&quest;</button>
 <div class="content" >
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">The American 
@@ -262,10 +273,10 @@ reap the rewards:
   <br>
   <br>
 <div class="row">
- <div class="column">
+ <div class="threecolumn">
   <img src="Images/BabyGirlReading.JPG" alt="Baby reading" style="float: left; margin-right:10px; width: 100% ">
  </div>
- <div class="column">
+ <div class="threecolumn">
 <ol>
  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 A regular routine time for reading provides structure and security for young
@@ -279,7 +290,7 @@ It&apos;s fun. Reading and rereading favorites is a time for laughter and playfu
 Reading books helps expand children&apos;s attention span and world knowledge. Following their interests with books, they&apos;ll be able to listen eagerly to longer and more complex stories. They may even enjoy some selections from the nonfiction section in the library.</li> 
 </ol>
  </div>
- <div class="column">
+ <div class="threecolumn">
   <img src="Images/KreadtoN.JPG" alt="K reads to N" style="float: right; margin-left:10px; width: 100% ">
  </div>
 </div>
