changed the header to Speech, Language, and Literacy Therapy
cleaned up an html tag

dpollack 01/27/2024

--- a/LS-home.html
+++ b/LS-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
 <title>Language Strides</title>
 <link rel="icon" href="Images/favicon-32x32.png">
@@ -32,8 +32,9 @@ p { text-align: center; font-family: Tw Cen MT; }
   <a href="LS-lets-talk.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Let's Talk</a>
 </div>
 
-<h2 style="font-size:40px; font-weight: bold;">Speech and Language Therapy</h2>
-<h2 style="font-size:40px; font-weight: bold;">in the Home</h2>
+<h2 style="font-size:40px; font-weight: bold;">Speech, Language, and Literacy Therapy</h2>
+<br>
+<br>
 
 <img src="Images/Nora_littlehouse.jpg" alt="house" style="width: 40%;" >
 
