removed language about home services. moved headers outside of cards
dpollack 01/27/2024

--- a/LS-services.html
+++ b/LS-services.html
@@ -117,13 +117,13 @@ today.</a></p>
 <div class="row">
  <div class="column">
   <div class="center">
+   <h1 style="padding-left: 100px">Executive Function</h1>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
       <img src="Images/boy-in-black-shirt.jpg" alt="Boy in Black Shirt" style="width:400px">
      </div>
      <div class="flip-card-back">
-      <h1>Executive Functions</h1>
       <div class="cardcenter">
        <p style="text-align: justify; font-size:20px">David is 11 and 
 likes soccer and science. At school he enjoys hands-on learning, but he 
@@ -144,15 +144,15 @@ stay on task when getting ready for school.</p>
  </div>
  <div class="column">
   <div class="center">
+   <h1 style="padding-left: 50px" >Grammar and vocabulary</h1>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
       <img src="Images/girl-wearing-blue-sweater.jpg" alt="Girl Wearing Blue Sweater" style="height:500px">
      </div>
      <div class="flip-card-back">
-      <h1>Grammar and vocabulary</h1>
       <div class="cardcenter">
-      <p style="text-align: justify; font-size:16px">When Joni was in 
+      <p style="text-align: justify; font-size:18px">When Joni was in 
 preschool, her parents asked for an evaluation. She used very short 
 sentences and had a limited vocabulary.  She often lashed out at siblings 
 and playmates because she was frustrated.  In therapy at her home, Joni built 
@@ -177,13 +177,13 @@ the growing demands of her schoolwork.</p>
 <div class="row">
  <div class="column">
   <div class="center">
+   <h1 style="padding-left: 70px">Reading and Pre-Reading Skills</h1>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
       <img src="Images/diligent-small-girl.jpg" alt="Diligent Small Girl" style="width:500px; padding: 90px 0">
      </div>
      <div class="flip-card-back">
-      <h1>Reading and Pre-Reading Skills</h1>
        <div class="cardcenter">
         <p style="text-align: justify; font-size:20px">Michelle 
 was having trouble learning her ABC&apos;s in Kindergarten. A timely
@@ -200,13 +200,13 @@ so she could get help at school.</p>
  </div>
  <div class="column">
   <div class="center">
+   <h1 style="padding-left: 100px">Articulation</h1>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
       <img src="Images/boy-reading-a-book.jpg" alt="Boy Reading A Book" style="width:500px; padding: 90px 0">
      </div>
      <div class="flip-card-back">
-      <h1>Articulation</h1>
        <div class="cardcenter">
         <p style="text-align: justify; font-size:20px">Shane was 7 and had 
 several speech sounds that he hadn&apos;t mastered.  He worked in therapy to 
@@ -225,6 +225,7 @@ school and in play dates.</p>
 <br>
 <br>
 <div class="center" style="width: 40%">
+ <h1 style="padding-left: 100px">Workshops</h1>
  <div class="flip-card" style="width: 800px;height: 410px;">
   <div class="flip-card-inner">
    <div class="flip-card-front">
@@ -233,7 +234,6 @@ school and in play dates.</p>
    </div>
    </div>
    <div class="flip-card-back">
-   <h1>Workshops</h1>
     <div class="cardcenter">
     <p style="text-align: justify; font-size:20px"> Contact Language Strides 
 to customize a workshop for the needs of your school or parents group. 
@@ -253,16 +253,18 @@ Field for all Learners</p>
 <br>
 <br>
 <div class="center">
-<p style="text-align: justify; font-size:28px">Language Strides LLC brings 
+<!-- removed 01/27/2024 dpollack <p style="text-align: justify; font-size:28px">Language Strides LLC brings 
 speech-language therapy right to your doorstep. Practicing in the home 
 environment, together we can tailor a plan to meet your child&apos;s needs. We 
 can extend the therapeutic effect by using personally relevant 
 materials&ndash;Your toys, your books, your schoolwork&ndash;and include 
 family members at every phase of treatment in order to get more practice and 
 keep making STRIDES.</p>
+-->
 </div>
-<h1 style="font-weight: bold;">Partnership In the HOME</h1>
+<!-- removed 01/27/2024 dpollack <h1 style="font-weight: bold;">Partnership In the HOME</h1>
 <h1 style="font-weight: bold;">Meeting you where you are, dishes in the sink and all.</h1>
+-->
 <br>
 <p style="text-align: center; font-size:30px; ">Language Strides LLC proudly serves the communities of Reston and Herndon, Virginia and the surrounding area.</p>
 </body>
