removed first descriptive paragraph added bullet list of qualifications added new descriptive paragraph changed daughters to children
dpollack 01/27/2024

--- a/LS-meet-andrea.html
+++ b/LS-meet-andrea.html
@@ -10,6 +10,7 @@ h2 { text-align: center; font-family: Tw Cen MT; }
 body { background-image: url("Images/glitters-on-lighter-blue-3991970.jpg"); background-size: 100% 100%; } 
 img { display: block; margin-left: auto; margin-right: auto; width: 60%; }
 p { text-align: justify; font-family: Tw Cen MT; }
+ul { list-style-type: "\* "; }
 
 </style>
 </head>
@@ -32,7 +33,7 @@ p { text-align: justify; font-family: Tw Cen MT; }
   <a href="LS-lets-talk.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Let's Talk</a>
 </div>
 
-<p  style="margin-right: 60px; margin-left: 60px; font-size:26px;">
+<!-- <p  style="margin-right: 60px; margin-left: 60px; font-size:26px;">
 <img src="Images/Andrea_ASHA-CCC-SLP.jpg" alt="Andrea" style="float: right; margin-left:60px; width: 25%;">
 Andrea Pollack completed a Bachelor of Arts degree in Linguistics at the 
 State University of New York at Stony Brook in 1993. She earned a Master 
@@ -43,15 +44,30 @@ speech-language pathology with Valley Health System and Inova Health System
 in Northern Virginia, she developed a clinical emphasis on child language
 disorders and early literacy support in private practice. 
 </p> 
+-->
+<p style="margin-right: 60px; margin-left: 60px; font-size:26px;">
+<img src="Images/Andrea_ASHA-CCC-SLP.jpg" alt="Andrea" style="float: right; margin-left:60px; width: 25%;">
+<ul style="margin-right: 60px; margin-left: 60px; font-size:20px">
+<li>Certificate of Clinical Competence from American Speech-Language-Hearing Association 1997 - Present</li>
+<li>Master of Science in Communication Sciences and Disorders from Northeastern University 1996</li>
+<li>Bachelor of Arts in Linguistics from Stony Brook University 1993</li>
+<li>ASHA Award for Continuing Education many times over</li>
+<li>Orton Gillingham trained</li>
+</ul>
+</p>
+<p style="margin-right: 60px; margin-left: 60px; font-size:26px;">
+Andrea practiced medical speech language pathology with Valley Health System
+and Inova Health System before starting a family. Since then she has developed
+a clinical emphasis on child language disorders and dyslexia.
+</p>
 <p  style="margin-right: 60px; margin-left: 60px; font-size:26px;">
-Andrea loves 
-building children&apos;s language skills and seeing their school and family 
-lives blossom as they put their new tools to work. She ushers children 
-into literacy by building a strong foundation of vocabulary and 
+Andrea loves building children&apos;s language skills and seeing their school 
+and family lives blossom as they put their new tools to work. She ushers 
+children into literacy by building a strong foundation of vocabulary and 
 pre-literacy skills and by empowering children to select reading material 
 that they love. She has extensive experience working with children with 
 ADHD and Executive Function Disorder. Andrea shares a love of the outdoors
-with her husband and 2 daughters.
+with her husband and 2 children.
 </p> 
 
 <table class="image">
