removed coronavirus section replaced milestones link name added new sentence to late late talker section
dpollack 01/27/2024

--- a/LS-talking-points.html
+++ b/LS-talking-points.html
@@ -144,7 +144,7 @@ p { text-align: center; font-family: Tw Cen MT; padding: 15px; }
   <a href="LS-talking-points.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Talking Points</a>
   <a href="LS-lets-talk.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Let's Talk</a>
 </div>
-<button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Language Strides Responds to the Coronavirus</button>
+<!-- <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Language Strides Responds to the Coronavirus</button>
 <div class="content">
  <div class="row">
   <div class="twocolumn">
@@ -177,6 +177,7 @@ Strides&apos; policies and precautions in order to decide what's right for you.
   </div>
  </div>
 </div>
+-->
 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Does my child need a Speech Language Pathologist&quest;</button>
 <div class="content" >
@@ -187,7 +188,7 @@ looking at an individual&apos;s development, it may be helpful to consider
 whether his or her communication abilities support age-appropriate 
 interactions, or whether interactions result in frustration.
 <br>
-<a href="https://www.asha.org/public/speech/development/chart/" target="_blank"> Speech and Language Development from Birth to Age 5</a> 
+<a href="https://www.asha.org/public/speech/development/chart/" target="_blank">Communication and Feeding Milestones: Birth to 5 Years</a> 
 <br>
 <a href="https://www.asha.org/public/speech/development/communicationdevelopment/" target="_blank">Speech and Language Development in the Elementary Years</a>
   </p>
@@ -197,7 +198,9 @@ interactions, or whether interactions result in frustration.
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 Longitudinal studies tell us that being a late talker at 24 months increases 
 a child&apos;s risk of having a low vocabulary at 48 months and predicts a 
-later age for school-readiness than typically developing children.
+later age for school-readiness than typically developing children. A speech
+language pathologist can help you improve your child's readiness to learn in
+school and other environments.
 <br>
 <a href="https://www.asha.org/public/speech/disorders/Late-Blooming-or-Language-Problem/" target="_blank">Late-Blooming or Language Problem&quest;</a></p>
 </div> 
